# mz

./: .gitignore  Makefile  README.md  main.py  print.py  pyproject.toml  setup.cfg  setup.py
print/src/main/python/: main.py
print/src/main/python/qt/: mainwindow.py
qt/: mainwindow.py  mainwindow.ui  qt.pro
