[tool.poetry]
name = "mz"
version = "0.1.0"
description = ""
authors = ["Юрий Пайков <cry5tal@cry5tal.in>"]

[tool.poetry.dependencies]
python = "~3.8"
"Qt5.py" = "^0.1.0"
PyQt5 = "^5.15.1"
openpyxl = "^3.0.5"
fbs = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8-isort = "^4.0.0"
pylint = "^2.6.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
